# Educational-Blockchain-Currency

./: .gitignore  Cargo.toml  README.md
src/: block.rs  main.rs
src/blockchain/: block.rs  blockchain.rs  lib.rs  main.rs  transaction.rs
src/routes/: catalogo.rs  info.rs  ping.rs
